--- a/SUMMARY.adoc
+++ b/SUMMARY.adoc
@@ -4,22 +4,30 @@
 . link:walkthroughs/README.adoc[Extending the Game]
 .. link:walkthroughs/createRoom.adoc[Create a Room]
 .. link:walkthroughs/deployRoom.adoc[Deploy a Room]
-... link:walkthroughs/bluemix-cf.adoc[IBM Bluemix: Cloud Foundry]
-... link:walkthroughs/bluemix-ics.adoc[IBM Bluemix: Containers]
+... link:walkthroughs/deployRoom.adoc#_ibm_bluemix[IBM Bluemix]
+.... link:walkthroughs/bluemix-cf.adoc[Cloud Foundry]
+.... link:walkthroughs/bluemix-ics.adoc[Containers]
 ... link:walkthroughs/heroku.adoc[Heroku]
 .. link:walkthroughs/registerRoom.adoc[Register a Room]
 //.. link:walkthroughs/createNPC.adoc[Creating Non-Player Characters]
 .. link:walkthroughs/createMore.adoc[Advanced Adventures]
-... link:walkthroughs/elkStack.adoc[Logging using the ELK stack]
-... link:walkthroughs/local-docker.adoc[Building locally with docker]
-.... link:walkthroughs/git.adoc[Git submodules (local core development)]
-.... link:walkthroughs/adding_your_own_sso_apps_for_local_testing.adoc[Adding your own Social Login apps for local testing]
-... link:walkthroughs/creatingYourOwnRoom.adoc[Creating your own Room from scratch]
-... link:walkthroughs/jsr107caching.adoc[Caching with JSR107/JCache]
-... link:walkthroughs/jsr107caching2.adoc[Caching with JSR107/JCache (part 2)]
-... link:walkthroughs/mapviarest.adoc[Map Service via REST (JAX RS)]
-... link:walkthroughs/cloudant.adoc[Cloudant]
-... link:walkthroughs/addItemsToYourRoom.adoc[Adding items to your room]
+... link:walkthroughs/createMore.adoc#_caching[Caching]
+.... link:walkthroughs/jsr107caching.adoc[JSR-107 part 1]
+.... link:walkthroughs/jsr107caching2.adoc[JSR-107 part 2]
+... link:walkthroughs/createMore.adoc#_rest[REST]
+.... link:walkthroughs/mapviarest.adoc[JAX RS]
+... link:walkthroughs/createMore.adoc#_persistence[Persistence]
+.... link:walkthroughs/cloudant.adoc[Cloudant]
+... link:walkthroughs/createMore.adoc#_room_improvements[Better Rooms]
+.... link:walkthroughs/addItemsToYourRoom.adoc[Adding items]
+.... link:walkthroughs/creatingYourOwnRoom.adoc[Room Protocol]
+... link:walkthroughs/createMore.adoc#_game_on_developments[Game On Dev]
+.... link:walkthroughs/elkStack.adoc[ELK Logging]
+.... link:walkthroughs/local-docker.adoc[Local Build]
+..... link:walkthroughs/git.adoc[Git]
+..... link:walkthroughs/adding_your_own_sso_apps_for_local_testing.adoc[Social Login]
+... link:walkthroughs/createMore.adoc#_scale[Scale]
+... link:walkthroughs/createMore.adoc#_fault_tolerance[Fault Tolerance]
 . link:microservices/README.adoc[Application Architecture]
 .. link:microservices/WebSocketProtocol.adoc[WebSocket Protocol]
 .. link:microservices/ApplicationSecurity.adoc[Application Security]
@@ -32,15 +40,15 @@
 .. link:chronicles/3-web-front-end.adoc[Freeing the Front-End]
 .. link:chronicles/4-polyglot.adoc[Not Java]
 .. link:chronicles/5-swagger.adoc[Show the API]
-.. link:chronicles/6-player-explodes.adoc[Breaking down the Player service]
+.. link:chronicles/6-player-explodes.adoc[Breaking down Player]
 .. link:chronicles/7-etcd.adoc[Config management #FTW]
 .. link:chronicles/8-bye-concierge.adoc[Buh-bye to Concierge!]
 .. link:chronicles/9-map-auth-hmac.adoc[Authorized operations]
 .. link:chronicles/10-more-rooms.adoc[More Rooms!]
 .. link:chronicles/11-the-sweep.adoc[Swept away... ]
-.. link:chronicles/12-room-isolation.adoc[Rec Room gets the cold shoulder]
+.. link:chronicles/12-room-isolation.adoc[Rec Room left outside]
 .. link:chronicles/13-auth-service.adoc[Auth Goes Its Own Way]
 .. link:chronicles/14-events.adoc[Pandemonium! Events!]
-.. link:chronicles/15-service-discovery.adoc[Marco! Polo! (Service registration and discovery)]
+.. link:chronicles/15-service-discovery.adoc[Marco! Polo!]
 .. link:chronicles/16-caching.adoc[Investigating Caching]
 .. link:chronicles/17-watson-news.adoc[Watson Alchemy News]
