--- a/walkthroughs/createMore.adoc
+++ b/walkthroughs/createMore.adoc
@@ -1,5 +1,9 @@
 = Advanced Adventures
 :icons: font
+:toc:
+:toc-title:
+:toc-placement: macro
+:toclevels: 2
 :creatingYourOwnRoom: link:creatingYourOwnRoom.adoc
 :elkStack: link:elkStack.adoc
 :local-docker: link:local-docker.adoc
@@ -7,21 +11,59 @@
 :jsr107b: link:jsr107caching2.adoc
 :jaxrs: link:mapviarest.adoc
 :addingItems: link:addItemsToYourRoom.adoc
+:cloudant: link:cloudant.adoc
+:slack: http://gameontext.slack.com/
 
-{empty}
+
+Beyond the cave of grues, fantastic adventures await.
 
 What else do you want to try? We have several walkthroughs, both long and short,
-to help you explore aspects of cloud native or microservice applications.
+to help you explore aspects of cloud native or microservice applications. We'll
+be adding more here over time, and accept suggestions / comments via our
+{slack}[slack] =).
 
-* {elkStack}[The ELK Stack: working with your logs]
-* {local-docker}[Local development using Docker]
-* {creatingYourOwnRoom}[Creating your own room from scratch]
-* {jsr107a}[Caching with JSR107 Annotations and Redis]
-* {jsr107b}[Caching with JSR107 API and Redis]
-* {jaxrs}[Using REST via JAX-RS to talk to the Map Service]
-* {addingItems}[Adding items to your room]
+toc::[]
 
-== Scale
+=== Caching
+
+Want to store something for a while? have the same view of state across multiple
+instances of a service? Caching may be just what you need.
+
+* [languagename]#JAVA#{jsr107a}[Caching with JSR107 Annotations and Redis]
+* [languagename]#JAVA#{jsr107b}[Caching with JSR107 API and Redis]
+
+=== REST
+
+Need to talk to another service using REST? We've got you covered.
+
+* [languagename]#JAVA#{jaxrs}[Using REST via JAX-RS to talk to the Map Service]
+
+=== Persistence
+
+Having trouble remembering things? wish there was a a way to store them somewhere?
+
+* [languagename]#JAVA#{cloudant}[Persistence via Cloudant]
+
+=== Room Improvements
+
+The basic room only goes so far, the protocol allows for much more. Want to
+add custom items, or commands to you room ? Want to know how to do it properly?
+Curious about the details of the protocol required to create a room in a new
+language / framework?
+
+* [languagename]#GENERIC#{creatingYourOwnRoom}[Creating a room, from a protocol perspective]
+* [languagename]#JAVA#{addingItems}[Adding items to your room]
+
+=== Game On Development
+
+Maybe you want to play with the core Game On services, maybe you are just looking
+for more information on how to develop your room. Here are a few guides to help
+you on your way.
+
+* [languagename]#GENERIC#{elkStack}[The ELK Stack: working with your logs]
+* [languagename]#GENERIC#{local-docker}[Local development using Docker]
+
+=== Scale
 
 Let's say you want to make the most popular room ever (an admirable
 goal), which means your room will need to scale to more than one
@@ -34,7 +76,7 @@ between the rooms make the bounded context be the suite, rather than any
 individual room? Would rooms need share state or communicate? Given that
 services should remain fiercely independent, where does that state go?
 
-== Fault tolerance
+=== Fault tolerance
 
 Let's say your service calls another service. This could be a cloud data source
 or a Watson API. In cloud native environments, that backing store might disappear
