--- a/chronicles/17-weather-room.adoc
+++ b/chronicles/17-weather-room.adoc
@@ -2,7 +2,7 @@
 :icons: font
 :signedHeaders: link:../microservices/ApplicationSecurity.adoc
 :WebSocketProtocol: link:../microservices/WebSocketProtocol.adoc
-:game-on: https://game-on.org/
+:game-on: https://gameontext.org/
 :java-sample: https://github.com/gameontext/sample-room-java#introduction
 :weather-room: https://github.com/rstephenrrtx/weather-room-java
 
