--- a/walkthroughs/addItemsToYourRoom.adoc
+++ b/walkthroughs/addItemsToYourRoom.adoc
@@ -10,6 +10,8 @@
 :roomDescription: https://github.com/gameontext/sample-room-java/blob/master/src/main/java/org/gameontext/sample/RoomDescription.java
 :roomImplementation: https://github.com/gameontext/sample-room-java/blob/master/src/main/java/org/gameontext/sample/RoomImplementation.java
 :message: https://github.com/gameontext/sample-room-java/blob/master/src/main/java/org/gameontext/sample/protocol/Message.java
+:jsr107: link:jsr107caching.html
+:jaxrs: link:mapviarest.html
 
 Where we learn about how to add items to your room.
 
@@ -33,7 +35,7 @@ In this adventure, we add a `Button` to the room and have it respond when the us
 
 ## Prerequisites
 
-This adventure doesn't require any prerequisites and may be applied directly to the {sampleroom}[Sample Room].
+This adventure doesn't require any prerequisites and may be attempted directly after completing the {sampleroom}[Java Sample Room].
 
 ## Walkthrough
 
@@ -250,5 +252,5 @@ Items and commands are important parts of the Game On protocol and are designed 
 You should now have a general understanding of the steps required to add items and handle them with commands.
 
 ## Suggested further adventures
-* Caching adventure - Learn about stateful items.
-* Item Framework adventure - Learn about new ways to extend your room.
+* {jsr107}[Caching adventure] - Learn about stateful items.
+* {jaxrs}[JAX RS] - Learn about invoking REST endpoint using JAX RS
