--- a/walkthroughs/local-docker.adoc
+++ b/walkthroughs/local-docker.adoc
@@ -1,8 +1,8 @@
-= Working with Game On! Locally
+= Running with Docker Compose
 :icons: font
 :toc:
 :toc-title:
-:toc-placement: preamble
+:toc-placement: manual
 :toclevels: 2
 :sociallogin: link:adding_your_own_sso_apps_for_local_testing.adoc
 :wdt-eclipse: link:eclipse_and_wdt.adoc
@@ -13,120 +13,18 @@
 :root: https://github.com/gameontext/gameon
 :adventures: link:createMore.adoc
 :contribute: https://github.com/gameontext/gameon/blob/master/CONTRIBUTING.md
+:compose: https://docs.docker.com/compose/install/
+:releases: https://github.com/docker/compose/releases
 
+== Requirements
 
-Developing and testing your room locally in a production-like environment is an
-important aspect of {12-factor}[Twelve factor applications], as it reduces the
-likelihood that what you create locally will fail in new and unexpected ways
-when activated in production.
+Game On! requires `docker-compose` {releases}[version 1.15.0 or greater].
+{compose}[Installation instructions] vary by platform. 
 
-Game On! is a containerized application that uses replacable backing services
-that can also run locally in containers (sometimes with minor substitutions, 
-as we'll see). We like this for two reasons: 1) we can directly see what happens 
-when we prod things with a stick, and 2) we can be much more destructive with 
-local copies without worrying about messing something up.
+[[running]]
+== Starting game services locally 
 
-== Using Vagrant
-
-The Vagrantfile defined in the {root}[gameontext/gameon] (root) project will ensure that you're 
-using the right versions of everything, regardless of which orchestration engine
-you use, at the cost of getting one version right.
-
-You need at least version 1.9.8 of Vagrant, which you can install using packages 
-from the {vagrant}[Vagrant downloads page].
-
-Once you have Vagrant installed: 
-1. Use `vagrant up` to provision and launch the Vagrant VM.
-2. Use `vagrant ssh` to create a command shell in the VM
-  * All commands in the following sections are run in this shell
-  * You will start in the `/vagrant` directory
-    - This directory is 'shared'
-    - It is the directory containing the Vagrantfile (the root `gameon` project)
-3. When you're done, use `vagrant down` to stop the VM.
-4. Use `vagrant destroy` to tear down the VM completely.
-
-== Using Docker
-
-{docker}[Installing Docker] varies by platform. On Windows and macOS, you can
-also choose between Docker native and Docker Toolbox. Both should work.
-We provide a few different ways for you to do this, to allow you to compare 
-approaches and see which you like best. We also provide some pre-built images to 
-make this easier.
-
-== Starting game services locally (TL;DR)
-
-1. Obtain the source for this repository:
-  * HTTPS: `git clone https://github.com/gameontext/gameon.git`
-  * SSH: `git clone git@github.com:gameontext/gameon.git`
-
-2. Change to the gameon directory
-+
--------------------------------------------
-cd gameon
--------------------------------------------
-3. Setup your environment (one time). 
-+
--------------------------------------------
-./go-admin.sh setup
--------------------------------------------
-4. Start core game services: 
-+ 
--------------------------------------------
-./go-admin.sh up
--------------------------------------------
-5. *Carry on with {adventures}[building your room]!*
-
-6. Clean up 
-+
--------------------------------------------
-./go-admin down
--------------------------------------------
-The `go-admin.sh` script wraps the most generic of the orchestration-specific 
-steps shown below (Docker Compose or Kubernetes).
-
-== Configuration 
-
-When Game On! runs in the cloud, it uses etcd to obtain its configuration.
-When running locally it expects all this to be fed to it via the environment,
-which `docker-compose.yml` retrieves configuration from the `gameon.env` file
-(or similar) defined in the root directory.
-
-Some addional notes regarding environment-specific config: 
-
-* When you run natively, the "host" for your containers is the OS itself, so
-  127.0.0.1 will work just fine (default url in `gameon.env`).
-  
-* When you run in Docker Toolbox, there is a VirtualMachine acting as the host
-  for your containers. This means that (for URLs and other things) you need to
-  use the xref:dockerhost[IP of the VM]. A `gameon.<DOCKER_MACHINE_NAME>env`
-  file will be created as a modified copy of `gameon.env` to adjust. 
-  
-* Similarly, if you are running with Vagrant, you need to use the Vagrant VM's 
-  IP address. A `gameon.vagrantenv` file will be created in the root directory 
-  as a modified copy of `gameon.env`. 
-
-=== .SSH Keys and KeyStores
-****
-Because Game On! uses a Certificate for HTTPS and for JWT signing, we need to
-generate one for local use. We create a special mapped volume (called `keystore`) 
-that provides a generated local keystore to containers. Scripts will ensure
-that this volume exists.
-****
-
-== Container orchestration
-
-For sanity, you need help of some kind to manage starting and stopping images. 
-Even with the orchstrators we show below, we still wrap those invocations 
-with shell scripts: the scripts help ensure you issue the same commands the 
-same way every time, and that others do the same. 
-
-=== Running with Docker Compose
-
-We require docker-compose version 1.15.0 or greater.
-
-==== To run the game locally using Docker Compose: 
-
-1. Obtain the source for this repository:
+1. Obtain the source for the root project ({root}[gameontext/gameon]) 
   * HTTPS: `git clone https://github.com/gameontext/gameon.git`
   * SSH: `git clone git@github.com:gameontext/gameon.git`
 
@@ -142,16 +40,17 @@ cd gameon
 -------------------------------------------
 +
 This will ensure that you have an env file suitable for use 
-with docker-compose (docker-machine, vagrant, or vanilla), and pulls the initial 
-images required for running the system. When using Vagrant, this step is done as 
-part of provisioning the VM.
+with `docker-compose` and pulls the initial images required 
+for running the system. 
++
+When using Vagrant, this step is done as part of provisioning the VM.
 
-4. Start the game fabric!
+4. Start the game!
 +
 -------------------------------------------
 ./docker/go-run.sh up
 -------------------------------------------
-5. Wait for the system warm up: 
+5. Wait for the system warm up
 +
 -------------------------------------------
 ./docker/go-run.sh wait
@@ -173,10 +72,10 @@ directly (see <<go-run,below>>).
 ./docker/go-run.sh down
 -------------------------------------------
 
-==== Files supporting Docker Compose
+== Files supporting Docker Compose
 
-The `docker` subdirectory of the root project ({root}[gameontext/gameon]) 
-contains the files required to make the core game services go: 
+The `docker` subdirectory of the root project
+contains the files required to make game services go: 
 
 * `docker-compose.yml` declares core game and required backing services
 * `docker-compose.override.yml.example` can be copied to `docker-compose.override.yml` 
@@ -220,24 +119,8 @@ Additional notes for running with Docker Compose:
 though `docker` doesn't.
 * The Vagrant VM allows all `sudo` operations with no password.
 
-=== Running with Kubernetes
-
-_TBD (I know.. such a tease!)_
-
-== Modifying Core Game services
-
-If you change your mind, and decide you want to start hacking on a core game
-service, no worries! You can mix and match the two approaches. 
-
-We use {git}[git submodules] to allow editing of core game services while 
-working with the {root}[gameontext/gameon] (root) project to coordinate 
-deployment.
-
-[IMPORTANT]
-====
-When using {git}[git submodules], please do not commit any changes to submodule
-versions. Submodule versions are maintained by automated builds.
-====
+[[rebuild]]
+== Rebuilding Core Game services with Docker Compose
 
 The following instructions assume you've cloned the root repository, 
 and are interested in editing the `map` service as an example: 
@@ -264,18 +147,17 @@ Edit source or docker/image files using your favorite IDE.
 TIP: If you plan to edit projects with Eclipse, run `./bin/eclipse.sh` to generate eclipse project files.
 
 4. Compile the source and rebuild docker image
-* *When using Docker Compose*: 
-** To rebuild and restart the map service:  
+* To rebuild and restart the map service:  
 +
 -------------------------------------------
 ./docker/go-run.sh rebuild map
 -------------------------------------------
-** To rebuild the image without recreating the container:  
+* To rebuild the image without recreating the container:  
 +
 -------------------------------------------
 ./docker/go-run.sh rebuild_only map
 -------------------------------------------
-** If the service argument is left off, it will attempt to rebuild all
+* If the service argument is left off, it will attempt to rebuild all
 of the core services (auth, map, mediator, player, room, webapp). If those 
 submodules haven't been checked out, there is no harm. The image from dockerhub
 will be used instead.
@@ -297,12 +179,6 @@ file, but you may need to run `eval $(./docker/go-run.sh env)` to update your
 `COMPOSE` environment variable.
 ====
 
-* *When using Kubernetes*
-+
--------------------------------------------
-...
--------------------------------------------
-
 5. Push your changes to a new branch. From the map directory: 
 +
 -------------------------------------------
@@ -322,41 +198,5 @@ check in this change.* Sadly, these files can not be added to `.gitignore`.
 Care must be taken to avoid staging these files if you otherwise end up making
 changes to files in the root project itself.
 
-== Notes
-
-==== Iterative development of Java applications with WDT
-
-If you're using Eclipse for development, and have opted for the iterative 
-approach (using `docker-compose.override.yml` for volumes, e.g.), 
-we recommend using WebSphere Developer Tools (WDT) to work with the Java
-services contained in the sample. There is some (one time) {wdt-eclipse}[configuration 
-required to make WDT happy with the docker-hosted applications], 
-but you are then free to use eclipse to make changes to the project that will
-be immediately picked up by the running server without having to rebuild
-or restart anything.
-
-=== Supporting 3rd party auth
-
-3rd party authentication (twitter, github, etc.) will not work locally, but the
-anonymous/dummy user will. If you want to test with one of the 3rd party
-authentication providers, you'll need to 
-{sociallogin}[set up your own tokens to do so.]
-
-[[dockerhost]]
-=== Determining the host IP address (Docker Toolbox)
-
-After you have Docker Toolbox installed, verify the host machine name:
-`docker-machine ls`. The default name is `default`, but if you're a former
-Boot2Docker user, it may be `dev` instead. Substitute this value appropriately
-in what follows.
-
-If you aren't using the docker quick-start terminal, you'll need to set the
-docker environment variables in your command shell using
-`eval "$(docker-machine env default)"`.
-
-Get the IP address for your host using `docker-machine ip default`.
-
-`./docker/go-setup.sh` and `./docker/go-run.sh` will create a 
-`gameon.<DOCKER_MACHINE_NAME>env` file to account for the IP address
-difference.
+ 
 
